--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -6,3 +6,12 @@ $primary: darken(#428bca, 20%);
 
 // the ~ allows you to reference things in node_modules
 @import "~bootstrap/scss/bootstrap";
+
+#navbarNav{
+    font-size: 20px;
+      
+}
+
+#linkhome{
+    font-size: 50px;
+}
