--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,34 +1,38 @@
 <header>
 	<nav class="navbar navbar-expand-lg bg-success">
-		<div class="container-fluid border" >
+		<div class="container-fluid border">
 			<a class="navbar-brand col-1 px-5 " href="#"><img src="{{ asset('build/images/logo.png') }}" alt="ACME logo" style="width:100px; height:100px"></a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav col" >
-					<li class="nav-item col-4" >
-						<a class="nav-link active" aria-current="page" href="//" style="color: black" id ="linkhome">Wild Series</a>
+				<ul class="navbar-nav col">
+					<li class="nav-item col-4">
+						<a class="nav-link active" aria-current="page" href="//" style="color: black" id="linkhome">Wild Series</a>
 					</li>
 
-					<li class="nav-item dropdown col-2" >
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: black">
+					<li class="nav-item dropdown col-2">
+						<a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: black">
 							Catégories
 						</a>
 						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<li>
-								<a class="dropdown-item" href="#">Science Fiction</a>
+								<a class="dropdown-item" href="/categorie/">Catégories</a>
 							</li>
 							<li>
-								<a class="dropdown-item" href="#">Dramatique </a>
+								<a class="dropdown-item" href="">Science Fiction</a>
+							</li>
+							<li>
+								<a class="dropdown-item" href="#">Dramatique
+								</a>
 							</li>
 							<li>
 								<a class="dropdown-item" href="#">Action</a>
 							</li>
-                            <li>
+							<li>
 								<a class="dropdown-item" href="#">Aventure</a>
 							</li>
-                            <li>
+							<li>
 								<a class="dropdown-item" href="#">Fantastique</a>
 							</li>
 						</ul>
@@ -40,7 +44,7 @@
 						<a class="nav-link" href="" style="color: black">Mes Favories</a>
 					</li>
 					<li class="nav-item col-2">
-						<a class="nav-link" href=""style="color: black">Déconnexion</a>
+						<a class="nav-link" href="" style="color: black">Déconnexion</a>
 					</li>
 				</ul>
 			</div>
