I has create my first entity with Doctrine

--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Programme{% endblock %}
+{% block title %}Séries{% endblock %}
 
 {% block body %}
 <h1>{{ program }}</h1>
